metadata-sfdx/force-app/main/default/objects/FormAssignment__c/FormAssignment__c.object-meta.xml
<CustomObject>
    <description>Junction object to assign form records to SC Config Experience</description>
    <label>Form Assignment</label>
    <nameField>
        <displayFormat>FAN-{000}</displayFormat>
        <label>Form Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Assignments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>