metadata-sfdx/force-app/main/default/objects/FormAssignment__c/fields/ExperiencePath__c.field-meta.xml
<CustomField>
    <fullName>ExperiencePath__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Experience Path</label>
    <referenceTo>SCConfigFormAssignments__c</referenceTo>
    <relationshipLabel>Form Assignments</relationshipLabel>
    <relationshipName>FormAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>