metadata-sfdx/force-app/main/default/objects/FormAssignment__c/fields/HCConfigForm__c.field-meta.xml
<CustomField>
    <fullName>HCConfigForm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HC Config: Form</label>
    <referenceTo>HCConfigForm__c</referenceTo>
    <relationshipLabel>Form Assignments</relationshipLabel>
    <relationshipName>Form_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>