metadata-sfdx/force-app/main/default/objects/FormAssignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HCConfigForm__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>